--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <thead>
             <tr>
                <td>
-                  <img src="photos/Tabrese.png" alt="Tabrese standing on his 2013 Subaru BRZ" height="300px" width="200px">
+                  <img src="Photos/Tabrese.png" alt="Tabrese standing on his 2013 Subaru BRZ" height="300px" width="200px">
                </td>
                <td>
                   <h1>Tabrese Sequeira</h1>
