--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                </td>
                <td>
                   <h1>Tabrese Sequeira</h1>
-                  <em><strong>Beginner at this coding shit</strong></em><br>
+                  <em><strong>Programming Novice</strong></em><br>
                   Self taught, DIYer who is looking to take on a new challenge <br>
                </td>
             </tr>
