--- a/hobbies.html
+++ b/hobbies.html
@@ -7,6 +7,7 @@
   <body>
     <center>
     <h1>My Hobbies</h1>
+       <a href="index.html">Back To Home</a>
       <hr width=25%>
     </center>
 <h2>Photography</h2>
