updated code to match local file

--- a/index.html
+++ b/index.html
@@ -3,25 +3,35 @@
    <head>
       <meta charset="utf-8">
       <title>Tabrese Sequeira's Personal</title>
+      <link rel="stylesheet" href="css/styles.css">
    </head>
    <body>
-      <hr>
-      <table cellspacing="20" >
-         <thead>
+     <table
+    <center>
+      <table>
             <tr>
                <td>
-                  <img src="Photos/Tabrese.png" alt="Tabrese standing on his 2013 Subaru BRZ" height="300px" width="200px">
-               </td>
-               <td>
-                  <h1>Tabrese Sequeira</h1>
-                  <em><strong>Programming Novice</strong></em><br>
-                  Self taught, DIYer who is looking to take on a new challenge <br>
-               </td>
+                 <img src="photos/Tabrese.png" alt="Tabrese standing on his 2013 Subaru BRZ" height="150px">
+              </td>
+              <td>
+                  <table style="border-bottom: 3px; border-left: 0px; border-right: 3px; border-top: 3px; border-style: solid; padding: 5px">
+                    <tbody>
+                      <tr>
+                        <td style="font-size: 26px; background-color: #FFFFFF; color: #7C99AC; padding: 5px">
+                          <strong>Tabrese Sequeira</strong>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <em><strong>Beginner at this coding shit</strong></em><br>
+                          Self taught, DIYer who is looking to take on a new challenge
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
             </tr>
-         </thead>
-         <tbody>
-         </tbody>
       </table>
+    </center>
       <hr>
       <h3>Education</h3>
       <ul>
@@ -29,28 +39,27 @@
          <li>Cal Poly Pomona</li>
       </ul>
       <hr>
-      <h3>Employment</h3>
-
-      <table padding="200px">
-          <tr>
-            <th>
-              <strong>Year</strong>
-            </th>
+      <h3>Employment History</h3>
+      <table class="table1" cellspacing= 10px style="padding: 5px;">
+          <thead style="color: #9D9D9D;background-color: #FEFBF3; ">
             <th>
               <strong>Company</strong>
             </th>
-          </tr>
-         <tr align=left>
-            <td>2014-2016</td>
+            <th>
+              <strong>Year</strong>
+            </th>
+          </thead>
+         <tr>
             <td>United Parcel Service</td>
+            <td>2014-2016</td>
          </tr>
-         <tr align=left>
+         <tr>
+           <td>Enterprise Holdings</td>
             <td>2016-2018</td>
-            <td>Enterprise Holdings</td>
          </tr>
-         <tr align=left>
+         <tr>
+           <td><a href="https://arkperformance.com/">ARK Performance</a></td>
             <td>2018-2022</td>
-            <td><a href="https://arkperformance.com/">ARK Performance</a></td>
          </tr>
       </table>
       <hr>
@@ -87,6 +96,7 @@
          </tr>
       </table>
       <hr>
-      <a href="hobbies.html">Hobbies</a> <a href="Contact.html">Contact Me</a>
+      <a href="hobbies.html">Hobbies</a> <a href="contact.html">Contact Me</a>
+  </table>
    </body>
 </html>
